--- a/app/views/admin/orders/_show_partial.html.erb
+++ b/app/views/admin/orders/_show_partial.html.erb
@@ -62,7 +62,67 @@
   </tr>
 </table>
 <% end %>
-   <button onclick="window.print();">Print Order</button>
+
+<h2><b>Consignments</b></h2>
+<% @order.consignments.each_with_index do |oc, i| %>
+<table style="color:#696969;" class="consign consign-<%=i%>">
+  <tr>
+    <th>Consignment ID</th>
+    <th>Shipped At</th>
+    <th>Tracking#</th>
+    <th>Status</th>
+  </tr>
+  <tr>
+    <td><%= oc.id %></td>
+    <td><%= oc.shipped_at.strftime("%A, %e %b - %H:%M %p") %></td>
+    <td><%= oc.tracking_no %></td>
+    <% if oc.status == "Incomplete" %>
+    <td class="Incomplete"><%= oc.status.upcase %></td>
+    <% else oc.status == "Dispatched" %>
+    <td class="Dispatched"><%= oc.status.upcase %></td>
+    <% end %>
+  </tr>
+  <tr>
+    <td><b>Admin Notes:</td>
+    <td><%= oc.notes.to_s %></td>
+    <td><b>Boxes Sent: </b></td>
+    <td><%= oc.boxes.to_s %></td>
+  </tr>
+</table>
+<!-- <h2><b>Consignment Items</b></h2> -->
+<table class="consign-item-<%=i%>">
+  <tr>
+    <th>Product Code</th>
+    <th>Product Desc</th>
+    <th>Requested</th>
+    <th>Dispatched</th>
+    <th>Remaining</th>
+    <th>Status</th>
+    <th>Date Dispatched</th>
+    <th>Price</th>
+  </tr>
+<% oc.consignment_items.each do |ci| %>
+  <tr>
+    <td><%= ci.order_item.product.product_code %></td>
+    <td><%= ci.order_item.product.description %></td>
+    <td><%= ci.order_item.quantity %></td>
+    <td><%= ci.quantity %></td>
+    <td><%= ci.order_item.to_dispatch %></td>
+    <% if ci.consignment.status == "Incomplete" %>
+    <td class="Incomplete"><%= ci.consignment.status.upcase %></td>
+    <% else ci.consignment.status == "Dispatched" %>
+    <td class="Dispatched"><%= ci.consignment.status.upcase %></td>
+    <% end %>
+    <td><%= ci.created_at.strftime("%A, %e %b - %H:%M %p") %></td>
+    <td><b><%= number_to_currency ci.order_item.product.price %></b></td>
+  </tr>
+<% end %>
+</table>
+
+<% end %>
+
+<button onclick="window.print();">Print Order</button>
+
 
 <style>
   table {
@@ -92,4 +152,38 @@
     font-size: 3em;
     align-items: center;
   }
+
+  .Incomplete {
+  background:#FFA339;
+  font-weight:bold;
+  letter-spacing: 0.15em;
+  color:white;
+  /*color:#918f8a;*/
+  }
+
+  .Dispatched {
+    background:#8BAA8B;
+    font-weight: bold;
+    letter-spacing: 0.15em;
+    color:white;
+  }
+
+  .consign:hover {
+    cursor:pointer;
+  }
 </style>
+
+
+<script>
+  $('.consign').each(function(index){
+    $('.consign-item-'+index).hide()
+    $('.consign-'+index).on('click',function(){
+      $('.consign-item-'+index).toggle()
+    })
+  })
+</script>
+
+
+
+
+
