--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -9,7 +9,8 @@
 
 // Active Admin's got SASS!
 @import "active_admin/mixins";
-@import "active_admin/base";
+@import "active_material";
+// @import "active_admin/base";
 @import "chosen";
 @import "admin/index";
 // @import "select2";
