--- a/app/views/admin/orders/_show_partial.html.erb
+++ b/app/views/admin/orders/_show_partial.html.erb
@@ -63,8 +63,8 @@
 </table>
 <% end %>
 
-<button class="view-consigns">View Consignments</button>
-<button onclick="window.print();">Print Order</button>
+<button class="view-consigns custom-btn">View Consignments</button>
+<button class="custom-btn" onclick="window.print();">Print Order</button>
 <h1></h1>
 
 <% if @order.consignments.blank? %>
@@ -95,7 +95,7 @@
         <td><%= oc.boxes.to_s %></td>
       </tr>
     </table>
-    <table class="consign-item-<%=i%>">
+    <table class="consign-item consign-item-<%=i%>">
       <tr>
         <th>Product Code</th>
         <th>Product Desc</th>
@@ -131,6 +131,7 @@
       /*font-family: arial, sans-serif;*/
       border-collapse: collapse;
       width: 100%;
+      box-shadow: 3px 4px 8px 0px rgba(176,176,176,1);
   }
 
   td, th {
@@ -143,6 +144,10 @@
       background-color: #dddddd;
   }
 
+  body {
+    background:white;
+  }
+
   #cancel-notice {
     background-color: #c80303;
     background-image: linear-gradient(180deg, #e9dcdcbd, #dfcccc);
@@ -153,6 +158,33 @@
     justify-content: space-around;
     font-size: 3em;
     align-items: center;
+  }
+
+  .custom-btn {
+    font-size: 0.875rem;
+    letter-spacing: 0.01em;
+    background: transparent;
+    border-radius: 2px;
+    border: 0;
+    cursor: pointer;
+    /*display: inline-block;*/
+    line-height: 18px;
+    margin-top: 20px;
+    padding: 12px 8px;
+    /*position: relative;*/
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.25s all;
+    background-color: #00689f;
+    color: white;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.12);
+    min-width: 88px;
+  }
+
+  .custom-btn:hover {
+    color: white;
+    background: #0089d2;
+    outline: none;
   }
 
   .Incomplete {
@@ -170,8 +202,16 @@
     color:white;
   }
 
+  .consign {
+    margin-top: 20px;
+  }
+
   .consign:hover {
     cursor:pointer;
+  }
+
+  .consign-item {
+    margin-top: 20px;
   }
 </style>
 
