--- a/app/views/admin/orders/_show_partial.html.erb
+++ b/app/views/admin/orders/_show_partial.html.erb
@@ -175,7 +175,7 @@
     text-align: center;
     text-transform: uppercase;
     transition: 0.25s all;
-    background-color: #00689f;
+    background-color: #009688;
     color: white;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.12);
     min-width: 88px;
@@ -183,7 +183,7 @@
 
   .custom-btn:hover {
     color: white;
-    background: #0089d2;
+    background: #00c9b6;
     outline: none;
   }
 
