--- a/app/views/admin/dashboard/_date_range_search.html.erb
+++ b/app/views/admin/dashboard/_date_range_search.html.erb
@@ -1,10 +1,34 @@
-<%= form_tag(admin_dashboard_stock_search_path, method: :get, remote: true) do %>
-  <br><p style="color:#5E6469;">Calculate Total Stock upto a specific date...</p><br>
-  <div style="display:flex;">
-    <%= date_field_tag 'date_from', @date_from%>
-    <%= submit_tag 'Search', class: 'stock-search-btn' %>
-  </div>
-
-<% end %>
+<div style="padding:16px;">
+  <%= form_tag(admin_dashboard_stock_search_path, method: :get, remote: true) do %>
+    <br><p style="color:#5E6469;">Calculate Total Stock upto a specific date...</p><br>
+    <div style="display:flex;">
+      <%#= date_field_tag 'date_from', @date_from %>
+      <%= text_field_tag 'date_from', @date_from, placeholder: "Choose a Date" %>
+      <%= submit_tag 'Search', class: 'stock-search-btn', id: 'stock-search-btn' %>
+    </div>
+  <% end %>
+</div>
 
 <div class="results-table"></div>
+
+<style>
+  #date_from {
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  #stock-search-btn {
+    border-radius:50%;
+    min-width:0;
+  }
+
+</style>
+
+<script>
+  $('#date_from').datepicker({dateFormat: 'dd/mm/yy'});
+</script>
