Stock Count can now be toggled on and off admin dashboard

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -50,6 +50,12 @@
 //   margin:0;
 // }
 
+#stock-panel:hover {
+  cursor:pointer;
+  text-decoration: underline;
+  text-decoration-color:#A9A9A9;
+}
+
 #order_user_id {
   margin-top: 10px;
 }
