Some JS Corrections to the previous push

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -50,7 +50,7 @@
 //   margin:0;
 // }
 
-#stock-panel:hover {
+#stock-panel h3:hover {
   cursor:pointer;
   text-decoration: underline;
   text-decoration-color:#A9A9A9;
